kubernetes-test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-one-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  paths:
  - path: /webapp
    backend:
      serviceName: webapp
      servicePort: 5678
  - path: /pictochat
    backend:
      serviceName: pictochat
      servicePort: 30255
  defaultBackend: 
    serviceName: pictochat
    servicePort: 30255
